Fix footer overlap issue

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,7 +38,7 @@ main {
   background-position: 0 0;
   background-repeat: repeat repeat;
   background-attachment: local;
-  min-height: calc(100% - 64px);
+  min-height: calc(100% - 64px - 106px);
 }
 //chrome fontfix
 body {
